tests/resources/errors/errors5.ac
import std;
import std.Error;

fn write_val(val: int64) {

#if OS_GROUP_WINDOWS
    handle: void* = std.GetStdHandle(-11);
    written: uint32;
    c: char = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    c: char = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct TestError :: *Error {
    const fn get_name() -> const char* {
        return "TestError";
    }
    const fn get_message() -> const char* {
        return "error raised!";
    }
}

struct A {
    v1: int64;
    v2: int64;
    v3: int64;
    v4: int64;
}

fn foo(cond: bool) -> A | raises TestError {
    if (cond) {
        return A{ 65, 66, 67, 68 };
    }

    raise TestError{};
}

fn main() {
    a: A = try (foo(true));
    write_val(a.v1);
    write_val(a.v2);
    write_val(a.v3);
    write_val(a.v4);
    try (foo(false));
}
